# ungula-encoder

./: API.md  README.md  library.properties
src/: ungula_encoder.h
src/ungula/: encoder.h
src/ungula/encoder/: i_encoder.cpp  i_encoder.h
src/ungula/encoder/drivers/: as5047p_spi.cpp  as5047p_spi.h  as5600.cpp  as5600.h  as5600_i2c.cpp  as5600_i2c.h  as5600_i2c_pwm.cpp  as5600_i2c_pwm.h  as5600_pwm.cpp  as5600_pwm.h  encoder_fake.h  i2c_encoder_fake.h  ma730_spi.cpp  ma730_spi.h  mt6701_abi.cpp  mt6701_abi.h  mt6835_spi.cpp  mt6835_spi.h
tests/: CMakeLists.txt  test_as5600.cpp  test_as5600_i2c.cpp  test_as5600_pwm.cpp  test_encoder.cpp  test_mt6701_abi.cpp  test_spi_encoders.cpp
